remove refund info from admin history table, fix refund info btns visibility, when click "show all history"

--- a/css/main.css
+++ b/css/main.css
@@ -4985,6 +4985,7 @@ select.ah-form-control:focus {
     padding: 0;
     width: 100%;
     border-radius: 0;
+    display: block !important;
 }
 
 .ah-overlay {
